@@ -6,6 +6,7 @@
      - fixed missing date range search and broken thumbnail bugs
      - fixed unable to disable AFS ACL changes bug (thx Stephen Joyce)
      - fixed missing hyphen in AFS group and user names support bug (thx Stephen Joyce) 
+     - added missing redirect after direct redirected folder call
      
 1.1.0: 2015/9/9
      - fixed wrong date format in getlastmodified property using mod_perl/Speedy CGI bug
